# Talking-like-AI

./: LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  error_handlers.py  exceptions.py  main.py
backend/app/models/: __init__.py  conversation.py  session.py
backend/app/prompts/: builder.py  moderation.py  stage2.py  stage3.py  stage4.py
backend/app/routes/: chat.py  session.py
backend/app/schemas/: session.py
backend/app/services/: llm_service.py  moderation_service.py  session_service.py
docs/log/: 2026-02-08-sse-streaming-bug.md
frontend/src/app/: globals.css  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/lib/: api.ts
user_story/: USER_STORIES.md
